--- a/temperature/tmp.css
+++ b/temperature/tmp.css
@@ -86,6 +86,11 @@ p{
     border: none;
     box-shadow: 1px 0 4px rgb(54, 48, 48);
   }
+  .opt{
+     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+  }
   .ii{
     display: flex;
     padding:10px;
