--- a/quiz/src.css
+++ b/quiz/src.css
@@ -14,7 +14,7 @@ body{
   min-width:500px;
 } 
 *{
-  font-family:cursive;
+  font-family: "Times New Roman", Times, serif;
 }
 p{
   font-size: medium;
